fix the bug that alertWarning covered by navbar in profile page

--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -3,4 +3,4 @@
 
 #alert-message
   position: fixed
-  top: -150px
+  top: -50px
